fix(fileTree): truncate long file names

--- a/src/features/FileTree/components/styles.module.css
+++ b/src/features/FileTree/components/styles.module.css
@@ -39,6 +39,7 @@
 		text-align: left;
 		text-overflow: ellipsis;
 		overflow: hidden;
+		text-wrap: nowrap;
 	}
 }
 
